Fix code block spacing

--- a/styles/highlight.css
+++ b/styles/highlight.css
@@ -1,7 +1,7 @@
 .remark-highlight {
   overflow: auto;
   font-size: 0.85em;
-  max-width: calc(100vw - 2px);
+  max-width: calc(100vw);
 
   /* This might be helpful for large & many blocks of code */
   /* PROS: faster initial rendering */
